tests/snapshots/run_wpt_conformance__trtx_triangular_int32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "triangular.https.any.js",
    "triangular int32 2D tensor default options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    triangularInput: i32[3, 3];\n  }\n\n  nodes {\n    [triangularOutput] = triangular(triangularInput, diagonal=0, label=\"\", upper=true);\n  }\n\n  outputs { triangularOutput; }\n}\n",
        ),
    },
)
