tests/snapshots/run_wpt_conformance__trtx_where_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float16 1D constant tensors, trtx
 where :: where float16 1D constant tensors: index 0: actual=90.4375 expected=70.25 ulp=323 tolerance=4
  inputs: inputCondition: [241, 0, 85, 0, 227, 51, 202, 0, 104, 227, 129, 129, 175, 134, 130, 140, 103, 46, 158, 17, 0, 41, 94, 0] (constant); inputFalseValue: [90.4375, 66.75, -39.8125, -21.6875, -67.375, -46.46875, -55.90625, 65.5625, 35.15625, 11.9609375, 76.625, 60.75, -93.9375, -30.390625, 34.3125, 7.70703125, -82.25, 91.125, 22.9375, 75, 18.875, 62.3125, 48.875, -75.4375] (constant); inputTrueValue: [70.25, 90, -1.53515625, -83.75, 29.59375, -37.09375, -6.6640625, -83.125, -90.5, -45.46875, 50.375, 46.5, 47.5, -21.953125, 42.90625, -76.8125, 67, 40.09375, -29.078125, -12.1875, -10.859375, -23.296875, 30.84375, -58.8125] (constant)
  expected whereOutput: [70.25, 66.75, -1.5351563, -21.6875, 29.59375, -37.09375, -6.6640625, 65.5625, -90.5, -45.46875 ...] (len=24)
  actual whereOutput: [90.4375, 66.75, -39.8125, -21.6875, -67.375, -46.46875, -55.90625, 65.5625, 35.15625, 11.9609375 ...] (len=24)
  expected whereOutput full nd:
[70.25, 66.75, -1.5351563, -21.6875, 29.59375, -37.09375, -6.6640625, 65.5625, -90.5, -45.46875, ...] (len=24, shape=[24])
  actual whereOutput full nd:
[90.4375, 66.75, -39.8125, -21.6875, -67.375, -46.46875, -55.90625, 65.5625, 35.15625, 11.9609375, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[24] @bytes([241, 0, 85, 0, 227, 51, 202, 0, 104, 227, 129, 129, 175, 134, 130, 140, 103, 46, 158, 17, 0, 41, 94, 0]);
    operand_1: f16[24] @bytes([167, 85, 44, 84, 250, 208, 108, 205, 54, 212, 207, 209, 253, 210, 25, 84, 101, 80, 251, 73, 202, 84, 152, 83, 223, 213, 153, 207, 74, 80, 181, 71, 36, 213, 178, 85, 188, 77, 176, 84, 184, 76, 202, 83, 28, 82, 183, 212]);
    operand_2: f16[24] @bytes([100, 84, 160, 85, 36, 190, 60, 213, 102, 79, 163, 208, 170, 198, 50, 213, 168, 213, 175, 209, 76, 82, 208, 81, 240, 81, 125, 205, 93, 81, 205, 212, 48, 84, 3, 81, 69, 207, 24, 202, 110, 201, 211, 205, 182, 79, 90, 211]);
  }

  nodes {
    [whereOutput] = where(operand_0, operand_2, operand_1, label="");
  }

  outputs { whereOutput; }
}
